Website/style.css
/* COMMON - styling used for all pages*/
body {
  margin: 0;
  background-color: #f8f6ee;
}

img {
  max-width: 100%; /*Ensure no images overflow screen*/
}

article {
  font-family: Andale Monoe, monospace;
  max-width: 50%;
  font-size: 12px;
  margin-left: auto;
  margin-right: auto;
}

.sticky {
  position: fixed;
  top: 0;
  z-index: 99;
}

/* HEADER */
.header {
  overflow: hidden;
  background-color: #eeeded;
  border-bottom: 3px solid rgb(216, 24, 24);
}

#links {
  display: flex;
  justify-content: space-between;
  padding: 0% 8% 0% 8%;
  align-items: baseline;
  font-family: Andale Mono, monospace;
  font-size: 1.3vw;
}

#links a {
  position: relative;
  text-align: center;
  text-decoration: none;
  color: black;
  width: 9vw;
  height: 3vw;
}

#links a:hover {
  color: rgb(216, 24, 24);
}

#logo {
  position: relative;
  width: 100%;
  align-items: baseline;
  padding-top: 10px;
}

/* FOOTER */
.footer {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: #eeeded;
  text-align: center;
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
  font-size: 12px;
  border-top: 3px solid rgb(216, 24, 24);
  z-index: 99;
}

/*HOMEPAGE:*/

.image-carousel {
  width: 60%;
  max-width: 40vw;
  position: relative;
  margin-top: 6vw;
  padding-bottom: 3vw;
  margin-left: 5vw;
  z-index: 1;
  float: left;
}
.slides {
  display: none;
}
.prev,
.next {
  cursor: pointer;
  position: absolute;
  top: 11vw;
  width: auto;
  padding: 16px;
  color: rgb(255, 255, 255);
  font-size: 16px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
}
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}
.prev:hover,
.next:hover {
  background-color: rgba(0, 0, 0, 0.8);
}
.number {
  color: #fdfdfd;
  font-size: 14px;
  padding: 8px 12px;
  position: absolute;
  font-family: Andale Mono, monospace;
}

.velkommen {
  width: 40%;
  float: left;
  padding-left: 50px;
  margin-top: 6vw;
}
.velkommen h1 {
  font-family: Andale Mono, monospace;
  color: rgb(122, 3, 3);
}
.velkommen p {
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
}
.velkommen p1 {
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
  color: rgb(223, 45, 45);
}

/*IMAGES:*/
.row {
  display: flex;
  flex-wrap: wrap;
  padding: 0 8px;
}

.column {
  flex: 20%;
  max-width: 25%;
  padding: 0 5px;
}

.column img {
  margin-top: 10px;
  vertical-align: middle;
  width: 100%; 
}


/*Info page*/

.container {
  width: 94%;
float: left;
justify-content: center;
padding-left: 2%;
padding-top: 6%;
padding-right: 2%;
align-self: center;
}

.ul {
  list-style-type: square;
  font-size: 24pt;
}
.textContainer {
  max-width: 40%;
  position: relative;
  justify-content: center;
  float: left;
  padding-left: 2%;
  padding-right: 2%;
  
}

.mapouter {
  position: sticky;
  text-align: right;
  max-height: 550px;
  max-width: 850px;
  justify-content: left;
  padding-right: 10%;
  float: left;
  }

  .gmap_canvas {
    overflow: hidden;
    background: none !important;
    height: 500px;
    width: 600px;
    float: left;
    justify-content: left;
    padding: auto;
  }

.FacebookWidget {
  justify-content: right;
  float: right;
  position: relative;
  padding-right: 5%;
  padding-left: 10%;
  width: 400px;
  height: 500px;
}
/*MENU*/

.menu {
  margin: 10% 10% 10%;
  text-align: center;
}
.menu p{
  display: inline-block;
  max-width: 500px;
  border: solid 2px rgb(216, 24, 24);
}

/*ABOUT*/
#facade {
  float: right;
  max-width: 300px;
  margin-left: 3%;
}

